--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,6 @@ yarn-error.log*
 
 # file / folder / picture
 
-./Lottie-animations
+./src/hooks/Lottie-animations
 
-After.png
-
-Before.png
+*.png
